Validando formulário de cadastro de usuário

--- a/src/view/TelaCadastroUsuario.form
+++ b/src/view/TelaCadastroUsuario.form
@@ -57,7 +57,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="893de" class="javax.swing.JTextField" binding="eMailTextField" default-binding="true">
+          <component id="893de" class="javax.swing.JTextField" binding="campoEmail">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -75,7 +75,7 @@
               <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <component id="50732" class="javax.swing.JTextField" binding="nomeTextField" default-binding="true">
+          <component id="50732" class="javax.swing.JTextField" binding="campoNome">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -88,7 +88,7 @@
               <toolTipText value="Informe aqui seu nome"/>
             </properties>
           </component>
-          <component id="3c880" class="javax.swing.JPasswordField" binding="passwordField1" default-binding="true">
+          <component id="3c880" class="javax.swing.JPasswordField" binding="campoSenha1">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -100,7 +100,7 @@
               <toolTipText value="Informe sua senha"/>
             </properties>
           </component>
-          <component id="8fad9" class="javax.swing.JPasswordField" binding="passwordField2" default-binding="true">
+          <component id="8fad9" class="javax.swing.JPasswordField" binding="campoSenha2">
             <constraints>
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
