--- a/src/view/TelaLogin.form
+++ b/src/view/TelaLogin.form
@@ -67,7 +67,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="e198c" class="javax.swing.JTextField" binding="eMailTextField" default-binding="true">
+          <component id="e198c" class="javax.swing.JTextField" binding="campoEmail">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -87,7 +87,7 @@
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <component id="cd274" class="javax.swing.JPasswordField" binding="passwordField1" default-binding="true">
+          <component id="cd274" class="javax.swing.JPasswordField" binding="campoSenha">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
